--- a/BankBal/BankBal.csproj
+++ b/BankBal/BankBal.csproj
@@ -5,10 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\BankDal\BankDal.csproj" />
     <ProjectReference Include="..\BankEntity\BankEntity.csproj" />
   </ItemGroup>
 
